Set packaging install prefix to /usr for Linux
Configures CPack and CMake to install system packages under /usr for better distro compatibility. Also updates icon selection logic to prefer assets/icon.png and fallback to screenshots/preview.png if needed.

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -249,7 +249,9 @@ jobs:
           for g in "${GEN_LIST[@]}"; do
             if [ -n "$g" ]; then
               echo "Running CPack for generator: $g"
-              cpack --config build/CPackConfig.cmake -C Release -G "$g" -V -D CPACK_OUTPUT_FILE_PREFIX="$outdir"
+              cpack --config build/CPackConfig.cmake -C Release -G "$g" -V \
+                -D CPACK_OUTPUT_FILE_PREFIX="$outdir" \
+                -D CPACK_PACKAGING_INSTALL_PREFIX="/usr"
               echo "CPack completed for $g"
             fi
           done
